DevTools: fix concatenation of HTTP headers with same name when reporting from browser

This used to be done in renderer and we missed it while migrating
instrumentation to the browser.

Bug: 812592
Change-Id: Idd661541bbcd9b4ce6ab40b00c56094de7b6a8eb
Reviewed-on: https://chromium-review.googlesource.com/924502
Commit-Queue: Andrey Kosyakov <caseq@chromium.org>
Reviewed-by: Dmitry Gozman <dgozman@chromium.org>
Cr-Commit-Position: refs/heads/master@{#538017}
Former-commit-id: f17f98581af869486600cf6cd53b6b07e5bddd2a